Create user when the app starts

--- a/states-frontend/index.html
+++ b/states-frontend/index.html
@@ -10,12 +10,14 @@
     
 </head>
 
-<body onload="yourName()">
-
+<body>
+    <div id="user-form"></div>
     <div class="grid-container">
         <div id="grid-left" class="grid-left">
-
+            <br><div id="username"></div><br>
+            <div id="stateslist"></div>
         </div>
+
         <div id="grid-right" class="grid-right">
             <br><h2>What states have you visited?</h2>
             <svg width="960" height="600" id="statesvg"> <!-- svg to hold the map. -->
@@ -43,10 +45,6 @@
                 </div>
             </svg>
         </div>
-      </div>
-
-
-
-
+    </div>
 </body>
 </html>
