Add State class and create links to states info

--- a/states-frontend/index.html
+++ b/states-frontend/index.html
@@ -19,8 +19,10 @@
     <div class="grid-container">
 
         <div id="grid-left" class="grid-left">
+            <div  id="grid-left-2" class="grid-left-2"></div>
 
-			<br><div id="username"></div><br>
+            <br><div id="username"></div><br>
+            <br><div id="visited-states"></div><br>
 			
             <div id="states-list">
                 <ul>
