Show state info by clicking on the link

--- a/states-frontend/index.html
+++ b/states-frontend/index.html
@@ -16,20 +16,21 @@
 	
 	<div id="user-form"></div>
 	
-    <div class="grid-container">
+    <div id="grid-container" class="grid-container">
 
         <div id="grid-left" class="grid-left">
-            <div  id="grid-left-2" class="grid-left-2"></div>
 
             <br><div id="username"></div><br>
-            <br><div id="visited-states"></div><br>
+            <br><div id="visited-states">Visited States (<span id="visited-states-amount">0</span>):</div><br>
 			
             <div id="states-list">
                 <ul>
 
                 </ul>
             </div>
-	   
+
+            <div id="state-info" class="state-info">Hello</div>
+
 		</div>
 
         <div id="grid-right" class="grid-right">
