Change button's styling, add Readme and license files

--- a/states-frontend/index.html
+++ b/states-frontend/index.html
@@ -21,7 +21,7 @@
         <div id="grid-left" class="grid-left">
 
             <br><div id="username"></div><br>
-            <br><div id="visited-states">Visited States (<span id="visited-states-amount">0</span>):</div><br>
+            <div id="visited-states">Visited States (<span id="visited-states-amount">0</span>):</div><br>
 			
             <div id="states-list">
                 <ul>
